--- a/force-app/main/default/classes/VDT_ProductAdoptionBatch.cls
+++ b/force-app/main/default/classes/VDT_ProductAdoptionBatch.cls
@@ -26,7 +26,8 @@ public with sharing class VDT_ProductAdoptionBatch implements Database.Batchable
      * @return  `Database.QueryLocator`
      */
     public Database.QueryLocator start(Database.BatchableContext bc) {
-        String productCountryField = VDT_CustomMetadataService.getCountryFieldForObject('Product_vod__c');
+        String productSObjectAPIName = VDT_CustomMetadataService.getProductCatalogObjectAPI();
+        String productCountryField = VDT_CustomMetadataService.getCountryFieldForObject(productSObjectAPIName);
         List<String> countries = String.isNotBlank(this.dataCalculationRecord.VDT_Country__c) ? this.dataCalculationRecord.VDT_Country__c.split(DELIMITER_CHARACTER) : new List<String>(); 
         List<String> countryCriterias = new List<String>();
         String countryClause = '';
@@ -36,10 +37,10 @@ public with sharing class VDT_ProductAdoptionBatch implements Database.Batchable
             }
             countryClause = 'WHERE (' + String.join(countryCriterias, ' OR ') + ')';
         }
-        String query = String.format('SELECT Id, Name, Product_Type_vod__c, {0} FROM Product_vod__c {1}', new List<String> {
-            productCountryField,
-            countryClause
-        });
+
+        String packageVersion = VDT_CustomMetadataService.getPackageVersion();
+        Map<String, String> queries = VDT_CustomMetadataService.getQueriesByPackageVersionAndModule(packageVersion, 'Product Adoption');
+        String query = String.format(queries.get('Product Adoption'), new List<String> { countryClause });
         String accountCountry = VDT_CustomMetadataService.getCountryFieldForObject('Account');
         String keyMessageCountry = VDT_CustomMetadataService.getCountryFieldForObject('Key_Message_vod__c');        
         String approvedDocumentCountry = VDT_CustomMetadataService.getCountryFieldForObject('Approved_Document_vod__c');
@@ -70,7 +71,7 @@ public with sharing class VDT_ProductAdoptionBatch implements Database.Batchable
      * @param bc 
      * @param records 
      */
-    public void execute(Database.BatchableContext bc, List<Product_vod__c> records) {
+    public void execute(Database.BatchableContext bc, List<SObject> records) {
         try {
             this.dataCalculationRecord.Batches_Number__c += 1;
             update this.dataCalculationRecord;
